  * Formatted for better readability and incorporates more key items from the native format
- Improves "ReloadGOP" Implementation
  * Generally updated and optimised
- Improves Volume Type Identification
  * Optical disc drives identified and assumption for network volumes
- Improves Detection of Previously Set NVRAM Variables
  * This helps further reduce unnecessary NVRAM writes


0.13.2.AC (12 Apr 2021):
-----------------------
- Fixes memory allocation bug
  * Progam hangs when 'fold_linux_kernels' is active and Linux instances with multiple kernels are present
  * This bug was introduced in v0.13.2.AA (Commit 68c7af0)
- Fixes volume badge icon detection bug
  * ".VolumeIcon" files were not being detected as meant to be
  * This bug was introduced in v0.13.2.AA (Commit 4bd2f6c)
- Improves Upstream Logging Format and Coverage
  * Formatted for better readability and incorporates key items from the native format


0.13.2.AB (09 Apr 2021):
-----------------------
- Corrects Notes on "fold_linux_kernels" in the Configuration File
  * The default setting is active and not disabled as was documented
- Fixes bug resulting in the output log level being one step below the configured value
  * This bug was introduced in v0.13.2.AA (Commit eeb00c1)
- Fixes memory allocation bug resulting in the program hanging
  * This bug was introduced in v0.13.2.AA (Commit 9307d38)
- Other misc fixes
  * Logging and icon selection improvements


0.13.2.AA (06 Apr 2021):
-----------------------
- Syncs with Upstream Post v0.13.2 Updates
  * Minimises Reading of 'HiddenTools' Variable
  * Fixes Menu Keystroke Event
    Could cause RefindPlus to hang when processing keystrokes in menus
- Syncs with Upstream v0.13.2
  * Misc Improvements (Skips items already implemented in RefindPlus)
  * Does not adopt upstream changes to non-volatile variable storage
  * Identifies JFS volumes if a third-party JFS driver is installed